--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body {
   align-items: center;
   height: 50px;
   background-color: blueviolet;
-  color: aliceblue;
+  color: rgb(202, 218, 233);
   padding: 10px 12px;
   
 }
