--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ main {
   background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
     color: white;
     border-radius: 5px;
-    border: none;
+    border: 1px;
     cursor: pointer;
 }
 .meme--image {
